# corewar

./: 42.s  CMakeLists.txt  Makefile  a.out  asm.c  asm.h  ft_atoi_cw.c  ft_split_cw.c  ft_strstr_cw.c  go  helltrain.cor  helltrain.s  lem_in.h  my  my_asm  pars_two.c  to_code.c  tst.c  zork 2.cor  zork 2.s  zork.cor  zork.cor4  zork.s  zork.sor  zork2.cor
champs/: 42.s  Gagnant.cor  Octobre_Rouge_V4.cor  ex.cor  mat.s  maxidef.cor  maxidef.s  mortel.cor  my  slider2.cor  tdc2.s
champs/examples/: bigzork.cor  helltrain.cor  my  zork.cor  zork.s
libftprintf/: Makefile  author  ft_atoi_cw.c  ft_split_cw.c  ft_strstr_cw.c  libft.h
