cmake_minimum_required(VERSION 3.9)
project(corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(corewar
        libftprintf/a.c
        libftprintf/b.c
        libftprintf/c.c
        libftprintf/d.c
        libftprintf/e.c
        libftprintf/f.c
        libftprintf/ft_atoi.c
        libftprintf/ft_bzero.c
        libftprintf/ft_foreach.c
        libftprintf/ft_is_negative.c
        libftprintf/ft_isalnum.c
        libftprintf/ft_isalpha.c
        libftprintf/ft_isascii.c
        libftprintf/ft_isdigit.c
        libftprintf/ft_ispar.c
        libftprintf/ft_isprint.c
        libftprintf/ft_iterative_factorial.c
        libftprintf/ft_itoa.c
        libftprintf/ft_lstadd.c
        libftprintf/ft_lstdel.c
        libftprintf/ft_lstdelone.c
        libftprintf/ft_lstiter.c
        libftprintf/ft_lstmap.c
        libftprintf/ft_lstnew.c
        libftprintf/ft_memalloc.c
        libftprintf/ft_memccpy.c
        libftprintf/ft_memchr.c
        libftprintf/ft_memcmp.c
        libftprintf/ft_memcpy.c
        libftprintf/ft_memdel.c
        libftprintf/ft_memmove.c
        libftprintf/ft_memset.c
        libftprintf/ft_printf.c
        libftprintf/ft_printf.h
        libftprintf/ft_putchar.c
        libftprintf/ft_putchar_fd.c
        libftprintf/ft_putendl.c
        libftprintf/ft_putendl_fd.c
        libftprintf/ft_putnbr.c
        libftprintf/ft_putnbr_fd.c
        libftprintf/ft_putstr.c
        libftprintf/ft_putstr_fd.c
        libftprintf/ft_sqrt.c
        libftprintf/ft_strcat.c
        libftprintf/ft_strchr.c
        libftprintf/ft_strclr.c
        libftprintf/ft_strcmp.c
        libftprintf/ft_strcpy.c
        libftprintf/ft_strdel.c
        libftprintf/ft_strdup.c
        libftprintf/ft_strequ.c
        libftprintf/ft_striter.c
        libftprintf/ft_striteri.c
        libftprintf/ft_strjoin.c
        libftprintf/ft_strlcat.c
        libftprintf/ft_strlen.c
        libftprintf/ft_strmap.c
        libftprintf/ft_strmapi.c
        libftprintf/ft_strncat.c
        libftprintf/ft_strncmp.c
        libftprintf/ft_strncpy.c
        libftprintf/ft_strnequ.c
        libftprintf/ft_strnew.c
        libftprintf/ft_strnstr.c
        libftprintf/ft_strrchr.c
        libftprintf/ft_strsplit.c
        libftprintf/ft_strstr.c
        libftprintf/ft_strsub.c
        libftprintf/ft_strtrim.c
        libftprintf/ft_tolower.c
        libftprintf/ft_toupper.c
        libftprintf/g.c
        libftprintf/get_next_line.c
        libftprintf/get_next_line.h
        libftprintf/h.c
        libftprintf/i.c
        libftprintf/j.c
        libftprintf/libft.h
        libftprintf/ft_split_cw.c
        libftprintf/ft_atoi_cw.c
        asm.c
        asm.h
        ft_strstr_cw.c
        lem_in.h
        pars_two.c
        tst.c)
